More frontend stuff

--- a/src/shared/style/global.scss
+++ b/src/shared/style/global.scss
@@ -56,5 +56,8 @@
 main {
 	max-width: 800px;
 	margin: 0 auto;
-	font-family: 'Montserrat', sans-serif;
+	font-family: 'Malgun Gothic', sans-serif;
+	h1 {
+		font-weight: bolder;
+	}
 }
