Fix server client desync in `/games`

--- a/src/shared/style/global.scss
+++ b/src/shared/style/global.scss
@@ -40,9 +40,10 @@
 }
 
 main {
-	max-width: 800px;
+	max-width: 820px;
 	margin: 0 auto;
 	font-family: 'Malgun Gothic', sans-serif;
+	padding: 0 10px;
 	padding-bottom: 30px;
 	h1 {
 		font-weight: bolder;
